--- a/CommandManagerDemo.styles.css
+++ b/CommandManagerDemo.styles.css
@@ -11,6 +11,8 @@ main[b-lx717bvdm1] {
 
 .sidebar[b-lx717bvdm1] {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    width:40%;
+    height:100%
 }
 
 .top-row[b-lx717bvdm1] {
@@ -89,7 +91,10 @@ main[b-lx717bvdm1] {
 .navbar-brand[b-n0lcqaaf7u] {
     font-size: 1.1rem;
 }
-
+container[b-n0lcqaaf7u]{
+    width:40%;
+    height:100%;
+}
 .bi[b-n0lcqaaf7u] {
     display: inline-block;
     position: relative;
